@@ -1,3 +1,8 @@
+2006-09-21  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (tkchat::PasteDlg): Doh! Scrollbar hooked to old
+	               invalid widget name.
+
 2006-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:  Make sure we only request tile 0.7 as 0.6 doesn't
